fix: button color in dark mode

--- a/styles/themes/_dark.scss
+++ b/styles/themes/_dark.scss
@@ -249,7 +249,7 @@ html.dark-mode {
   }
 
   .scroll-top-button {
-    border-color: $white;
+    border-color: $white !important;
     box-shadow: 4px 4px 0px $white;
     &:hover {
       background: $k-accent;
